--- a/web/templates/admin/content_test.html
+++ b/web/templates/admin/content_test.html
@@ -54,12 +54,6 @@
 <!-- 页面内容 -->
 <div class="row">
     <div class="col-md-12">
-        <div class="note note-danger">
-            <p>
-                NOTE: The below datatable is not connected to a real database so the filter and sorting is just
-                simulated for demo purposes only.
-            </p>
-        </div>
         <!-- Begin: life time stats -->
         <div class="portlet" type="grid">
             <div class="portlet-title">
@@ -118,7 +112,7 @@
                         <button class="btn btn-sm yellow table-group-action-submit"><i class="fa fa-check"></i> Submit
                         </button>
                     </div>
-                    <table class="table table-striped table-bordered table-hover" id="datatable_ajax">
+                    <table class="table" id="datatable_ajax">
                         <thead>
                         <tr role="row" class="heading">
                             <th>
